# pygomo

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  SECURITY.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: blank_issue.md
src/pygomo/: __init__.py
